--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 # main links
 
 main:
+  - title: "صفحه اصلی"
+    url: /index/
+  - title: "سامانه مالی سمپاد"
+    url: https://msampad.razaviedu.ir/
   - title: "معرفی دبیرستان"
     url: /about/
   - title: "معاونت ها و بخش ها"
