--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "دبیرستان دوره اول فرزانگان 5 مشهد"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-favicon                  : "/assets/images/photo.jpg"
+favicon                  : ""
 name                     : "ّFarzanegan"
 description              : "Best School in Iran, Mashhad"
 #url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -31,7 +31,7 @@ baseurl                  : #"/hadisadoghiyazdi1971.github.io" # the subpath of y
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 #logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-logo                     : "/assets/images/logo.jpg"
+logo                     : "/assets/images/logo1.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
@@ -129,7 +129,7 @@ analytics:
 
 # Author information
 author:
-  name: " دبیرستان دور اول فرزانگان 5  <br>اداره آموزش و پرورش مشهد"
+  name: " دبیرستان دوره اول فرزانکان 5 <br>اداره آموزش و پرورش مشهد"
   avatar: "/assets/images/photo.jpg"
   bio: "خراسان رضوی"
   location  : "مشهد مقدس <br> Contact Information: <br> Phone:+98-51-38400846" 
